--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,28 @@ name = "cNODE"
 uuid = "beb8f1f4-1bd2-4088-a5f1-47830db21328"
 authors = ["michel-mata <sm75@princeton.edu>"]
 version = "0.1.0"
+
+[deps]
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MLDataPattern = "9920b226-0b2a-5f5f-9153-9aa70a013f8b"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[compat]
+julia = "1.6.5"
+DiffEqFlux = "1.44"
+DifferentialEquations = "7.1"
+Distances = "0.10"
+Distributions = "0.25"
+Flux = "0.12"
+MLDataPattern = "0.5"
+Zygote = "0.6"
