--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -10,7 +10,7 @@ jobs:
     # THIS 'if' LINE IS NEW
     if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot'
     # NOTHING BELOW HAS CHANGED
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     steps:
       - uses: JuliaRegistries/TagBot@v1
         with:
